<resources>
    <string name="app_name">We Social</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="request_reset">Request reset</string>
    <string name="username">Username</string>
    <string name="wrong_username">Wrong Username</string>
    <string name="password">Password</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email address</string>
    <string name="email_verification">We need to verify you.</string>
    <string name="verify_email">Send email</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="email_required">Email is required</string>
    <string name="confirmation_password_required">Confirmation Password is required</string>
    <string name="biometric_auth_error">Biometric Auth Error!</string>
    <string name="biometric_auth_failed">Biometric Auth Failed!</string>
    <string name="password_unmatch">Password do not match.</string>
    <string name="downloading_latest">Downloading latest version.</string>
    <string name="verified">Account Verified!</string>
    <string name="awaiting_verification">Awaiting verification!</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="network_something_wrong">Network error! unable to complete.</string>
    <string name="wrong_credentials">Wrong credentials!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="biometrics_required">We Social</string>
    <string name="touch_sensor">Sign in with biometrics</string>
    <string name="Friends">Friends</string>
    <string name="pages">Pages</string>
    <string name="groups">Groups</string>
    <string name="notifications">My Notifications</string>
    <string name="mark_all_As_Read">Mark all as Read</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="Exit">Close Application</string>
    <string name="Logout">Logout</string>
    <string name="app_updated">App has been downloaded in the background. Installation will commence now.</string>
    <string name="app_updating">An update is being downloaded in the background.</string>
    <string name="sent_password_msg">If the email you provided is in our database, we will send a new password to your email.</string>
    <string name="Timeline">Timeline</string>
    <string name="post">Post</string>
    <string name="messages">Messages</string>
    <string name="invalid_email">Email is not a valid email address</string>
    <string name="invalid_login_details">Username or password is invalid.</string>
    <string name="please_login">All set, Please login!</string>
    <string name="closeApplication">Close application</string>
    <string name="permission_required">Permission required to install App.</string>
    <string name="loginSuccessful">Login successful!</string>
    <string name="update_Downloaded">Update downloaded, Installation in progress.</string>
    <string name="please_login_again">Something went wrong, please log in again.</string>
    <string name="myAccount">My Account</string>
    <string name="invalid_profile">Invalid profile, unable to get user data.</string>
    <string name="enter_the_verification_code">Please enter the verification code sent to your email.</string>
    <string name="One_Time_Code">Enter code here</string>
    <string name="verify">Verify</string>
    <string name="invalidOTC">Invalid code entered.</string>
    <string name="cancel_verification">Cancel</string>
    <string name="test_notification_details">Test Notification Details. Notifications from users and activities will be shown here.</string>
    <string name="test_notification_title">Test Notification Title</string>
    <string name="loadingNotifications">Loading…</string>
    <string name="not_logged_in">Sorry, you need to be logged in.</string>

    <string name="save">Save</string>
    <string name="updateProfile">Update Profile</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="middlename">Middle name</string>
    <string name="Nickname">Nickname</string>
    <string name="currentPassword">Enter Current Password</string>
    <string name="newPassword">Enter New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="updatePassword">Update Password</string>
    <string name="shareYourThoughts">What\'s on your mind?</string>
    <string name="sampleUsername">Sample Username…</string>
    <string name="Continue">Continue..</string>
    <string name="post_Long">Post Content too long.</string>
    <string name="empty_post">Sorry, your post is empty.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="refreshing">Updating timeline…</string>

    <string name="biometric_prompt_key">Biometric Prompt</string>
    <string name="biometric_prompt_message">Show  Prompt on startup?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="liked">Liked</string>
    <string name="deletePOST">Are you sure you want to delete this post?</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="no">No</string>

    <string name="deletePostTitle">Delete Post</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="comment_too_short">Comment too short.</string>
    <string name="comment_longer_than">Your comment is longer than</string>
    <string name="posting_comment">Posting Comment</string>
    <string name="error_commenting">An error occurred while posting comment…</string>
    <string name="comments">Comments</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="deleteComment">Are you sure you want to Delete this comment?</string>
    <string name="deleteCommentTitle">Delete Comment</string>
    <string name="editPost">Edit post</string>
    <string name="editing_content">Editing content…</string>
    <string name="update">Update</string>
    <string name="no_timeline">We have nothing to show you now…</string>
    <string name="updating_comment">Updating comment..</string>
    <string name="updating_post">Updating Post…</string>
    <string name="invalid_verification_code">Invalid verification code.</string>
    <string name="invalid_currentPassword">Current password is Invalid.</string>


    <string name="block">Block</string>
    <string name="goto_profile">View Profile >></string>
    <string name="no_friends">Sorry, we could not find any friends on  your friends list.</string>
    <string name="no_friend_requests">No pending friend requests.</string>
    <string name="no_blocked_friends">No blocked friends.</string>
    <string name="search">Search</string>

    <string name="no_search_result">"Sorry, we couldn't find anything that matches "</string>
    <string name="add_friend">Add friend</string>
    <string name="remove">Remove</string>
    <string name="offline">offline</string>
    <string name="we_found_result">"We found some results for "</string>
    <string name="new_friend_request">New Friend Request</string>
    <string name="accept">Accept</string>
    <string name="blocked">Blocked</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="decline">Decline</string>
    <string name="unblock">Unblock</string>
    <string name="type_message">Type a message</string>
    <string name="Cyberwizard">Cyberwizard</string>
    <string name="empty_message_content">Empty message content</string>
    <string name="message">Message</string>
    <string name="timeline">Timeline</string>
    <string name="pick_theme">Customize your theme</string>
    <string name="channel_name">push_channel_name</string>
    <string name="channel_description">push_channel_description</string>
    <string name="no_message">No messages yet!</string>
    <string name="about_me">About Me</string>
    <string name="retry">Retry!</string>
    <string name="email_the_same">Email unchanged!</string>
    <string name="delete">Delete</string>
    <string name="Be_first_to_comment">Be the first to comment.</string>
    <string name="toggleDarkMode_key">Toggle dark mode</string>
    <string name="toggle_dark_mode">Toggle Dark mode</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_page">Create new page</string>
    <string name="create_new_group">Create new group</string>
    <string name="open_to_public">Open to public</string>
    <string name="make_private">Make private (Friends only)</string>
    <string name="name_of_the_page">Name of the page</string>
    <string name="page_description">Page Description</string>
    <string name="leave_blank">Leave blank for no password</string>

    <string name="password_protect_page">Protect this page with a password</string>
    <string name="empty_page_name">Empty Page name..</string>
    <string name="empty_page_desc">Empty Page Description</string>
    <string name="page_created">Page Created successfully!</string>
    <string name="browse_page">Browse Pages</string>
    <string name="my_pages">My Pages</string>
    <string name="joined_pages">Joined Pages</string>
    <string name="no_page_found">No Page found</string>
    <string name="todo">TODO</string>
    <string name="search_for_pages">Search for pages...</string>
    <string name="posts">POSTS</string>
    <string name="members">Members</string>
    <string name="gallery">Gallery</string>
    <string name="join_Page">Join Page!</string>
    <string name="leave_page">Leave Page</string>
    <string name="search_results">Page Search Results</string>
    <string name="login_with_QR">Log in with QR code "</string>
    <string name="back_to_login">Back to login</string>
    <string name="qr_scan_instructions">Visit the link to scan</string>
    <string name="qr_scanner">Scan QR</string>
</resources>