<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/timeline"
                    android:icon="@drawable/timeline"
                    android:title="@string/Timeline" />
                <item
                    android:id="@+id/myNotifications"
                    android:icon="@drawable/notifications"
                    app:actionViewClass="android.widget.TextView"
                    android:title="@string/notifications" />
                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/messages"
                    android:icon="@drawable/message"
                    android:title="@string/messages" />


                <item
                    android:id="@+id/friends"
                    android:icon="@drawable/friends"
                    android:title="@string/Friends" />

                <item
                    android:id="@+id/pages"
                    android:icon="@drawable/pages"
                    android:title="@string/pages" />


                <item
                    android:id="@+id/groups"
                    android:icon="@drawable/group"
                    android:title="@string/groups" />

            </group>
        </menu>
    </item>


    <item
        android:id="@+id/scan_qr"
        android:icon="@drawable/qr_scanner"
        android:title="@string/qr_scanner" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/Logout" />
    <item
        android:id="@+id/closeapp"
        android:icon="@drawable/close"
        android:title="@string/closeApplication" />

</menu>