<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".userTimelineActivity">

    <TextView
        android:id="@+id/lblUpdateProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:background="?attr/colorPrimary"
        android:fontFamily="@font/nexalight"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/updateProfile"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imgCloseProfileEdit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:elevation="10dp"
        android:src="@drawable/cancel"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:rippleColor="@color/white"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="417dp"
        android:layout_height="738dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUpdateProfileTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/mainColour"

            android:orientation="vertical">

            <EditText
                android:id="@+id/txtProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnUpdateProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="50dp"
                android:height="30dp"
                android:background="@drawable/button_selector"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/txtProfileCurrentPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txtProfileFirstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtProfileLastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtProfileMiddlename"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/middlename"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtProfileNickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/Nickname"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtProfileAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:hint="@string/about_me"
                android:inputType="textMultiLine|textPersonName|textImeMultiLine"
                android:minHeight="48dp"
                android:minLines="7"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="50dp"
                android:height="30dp"
                android:background="@drawable/button_selector"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/txtProfileCurrentPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/txtProfileCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/currentPassword"
                android:inputType="textShortMessage|textPersonName|textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtProfileNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/newPassword"
                android:inputType="textShortMessage|textPersonName|textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtProfileConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileUpdateViewsHeight"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="100dp"
                android:background="@drawable/textview_rounded_corner_gray"
                android:enabled="true"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_vertical"
                android:hint="@string/confirmNewPassword"
                android:inputType="textShortMessage|textPersonName|textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnUpdateProfilePassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:width="50dp"
                android:height="30dp"
                android:background="@drawable/button_selector"
                android:text="@string/updatePassword"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>